Upgrades in the bspLib
Check for file existence
Handle lnorm3 error message
@export tag
working directory with here
.Rprofile: automatically load some libraries
.gitignore: VIM

--- a/src/POETS input analysis.Rmd
+++ b/src/POETS input analysis.Rmd
@@ -5,16 +5,11 @@ output: html_notebook
 
 ### Analysing existing dataset
 ```{r message=FALSE, warning=FALSE, include=FALSE}
-library(igraph)
-library(magrittr) # pipe operator
-library(devtools)
-document(pkg = "./src/bspLib/")
 library(bspLib) # my library
-getwd()
 ```
 First, let's import one of the POETS graphs:
 ```{r}
-data <- read.table("./external/asp/Networks/n5.edges", sep=" ", skip=2)
+data <- read.table(here("external", "asp", "Networks", "n5.edges"), sep=" ", skip=2)
 n5 <- graph_from_data_frame(d = data, directed=T)
 rm(data) # remove name from workspace to reduce clutter
 ```
@@ -48,13 +43,17 @@ Nearly perfect, just the tail is a bit fussy.
 
 ### Statistics for all the graphs
 ```{r}
-netPaths <- list.files("./external/asp/Networks/")
-nets <- netPath %>% list.files %>% lapply(function(x) bspLib::readPOETSGraph(paste0(netPath, x)))
+
+netNames <- list.files(here("external", "asp", "Networks"))
+nets <- netNames %>% lapply(function(x) {
+                              bspLib::readPOETSGraph(here("external", "asp", "Networks", x))
+                         })
 preds <- nets %>% sapply(function(x) bspLib::lnorm3_autofit(degree(x)))
+preds["estimate",]
 df <- data.frame(preds["estimate",] %>% sapply(c) %>% t,
                  nodes = sapply(nets, gorder),
                  edges = sapply(nets, gsize),
-                 names = netPath %>% list.files)
+                 names = netNames)
 ```
 Artificial graphs:
 ```{r}
@@ -68,5 +67,8 @@ fitdist(degree(nets[[1]]), distr="norm") %>% plot
 fitdist(degree(nets[[2]]), distr="exp") %>% plot
 fitdist(degree(nets[[3]]), distr="exp") %>% plot
 fitdist(degree(nets[[4]]), distr="exp") %>% plot
+```
+```{r}
+preds[,1]
 ```
 
