--- a/src/Timing machine.Rmd
+++ b/src/Timing machine.Rmd
@@ -4,17 +4,12 @@ output: html_notebook
 ---
 
 ## Input generator
-```{r setup, include=FALSE, res2ults='hide'}
-library(igraph)
-library(magrittr)
-library(devtools)
-document(pkg = "./bspLib/") # compile the newest version of my package
-library(bspLib)
-```
 Use a POETS graph to obtain a realistic distribution function:
 ```{r}
-getwd()
-sourceG <- readPOETSGraph("./external/asp/Networks/nodes8000.edges")
+library(here)
+library(bspLib)
+R.cache::setCacheRootPath(here("data", "cache"))
+sourceG <- bspLib::readPOETSGraph(here( "external", "asp", "Networks", "nodes8000.edges"))
 dfit <- lnorm3_autofit(degree(sourceG))
 ```
 Define an algorithm to be tested, for now just the default distance estimation from `igraph`:
@@ -27,25 +22,23 @@ algoDistances <- function(g, params) {  # params will be passed by Timing Machin
 
 ## Run series of sizes
 Specyfying a range of input sizes we can obtain runtimes of the algorithm with a single function call:
-```{r results='hide'}
+```{r}
 sizes <- seq(200, to = 5000, by = 200)
-
-if(!file.exists("./data/from200to5000.rds")){      # to be automated, use precomputed values if available
+     # to be automated, use precomputed values if available
   res <- runOnSizes(algoDistances, graphFromDist,
                   sizes, 300,
                   inputArgs = dfit, algArgs = c())
-  saveRDS(res, file="./data/from200to5000.rds")
-} else{
-  res2 <- readRDS(file="./data/from200to5000.rds")
-}
+```
+
+```{r}
 plot(res$nodes, res$elapsed)
 ```
 Having gathered enough datapoints one can fit a linear model and asses visually how it matches the data:
 ```{r results="hide"}
-squarefit <- lm(elapsed ~ poly(nodes, 2), data = res2)
+squarefit <- lm(elapsed ~ poly(nodes, 2), data = res)
 # plot(squarefit)
-{ plot(res2$nodes, res2$elapsed, col="red")
-  points(res2$nodes, predict(squarefit, res2), col="green")}
+{ plot(res$nodes, res$elapsed, col="red")
+  points(res$nodes, predict(squarefit, res), col="green")}
 ```
 
 And also inspect parameters of the model and various measures of it's uncertainity:
@@ -56,21 +49,15 @@ Note that in order to protect the model from correlation between powers of `node
 
 As the model seems to fit our observations, we may try to extrapolate execution time of the same algorithm with a bigger input size:
 ```{r message=FALSE, results='hide'}
-bigsizes <- c(6000, 8000, 10000, 12000)
-if(!file.exists("./data/bigres2.rds")){      # to be automated
-  bigres2 <- runOnSizes(algoDistances, graphFromDist,
+bigsizes <- seq(6000, to=12000, by=2000)
+bigres <- runOnSizes(algoDistances, graphFromDist,
                     bigsizes, 150,
                     inputArgs = dfit, algArgs = c())
-  saveRDS(bigres2, file = "./data/bigres2.rds")
-} else{
-  readRDS("./data/bigres2.rds")
-}
-
 
 ```
 
 ```{r}
-total <- rbind(res2, bigres2)
+total <- rbind(res, bigres)
 total$pred <- predict(squarefit, newdata = total)
 
 matplot(total$nodes, total[c("pred", "elapsed")], col = c("green", "red"), pch = c(1, 19))
