--- a/src/machine_learning/ml.Rmd
+++ b/src/machine_learning/ml.Rmd
@@ -68,12 +68,12 @@ varImpPlot(fit, n.var = 20)
 
 ```{r}
 path<-here("src", "cpp", "data", "sample.graph.txt")
-
 sample.g.df <- read.csv2(path, sep = "\t", comment.char = "#", header = F)
 sample.g <- graph_from_data_frame(sample.g.df, directed = F)
 sample.g %>% gorder
 sample.g %>% gsize
-sample.g %>% plot
+sample.g
+sample.g %>% plot(layout=layout_nicely)
 
 ```
 
