Not stable correction, supervised system

--- a/R/Finding split groups.Rmd
+++ b/R/Finding split groups.Rmd
@@ -39,3 +39,9 @@ n5 %>% V %>% sample(100) %>% lapply(function(x) paste0("\"asp/user/master/node-"
 
 ```
 
+```{r}
+n5 %>% degree %>% sort(decreasing = T) %>% head(20)
+n3 <- bspLib::readPOETSGraph(here("data", "newcastle", "n3.edges"));
+n3 %>% distances %>% sum
+```
+
